--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "@types/uuid": "^9.0.0",
     "firebase": "^9.16.0",
     "pinia": "^2.0.23",
     "roboto-fontface": "*",
+    "uuid": "^9.0.0",
     "vue": "^3.2.38",
     "vue-router": "^4.0.0",
     "vuetify": "^3.0.0",
