--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "antelope",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
@@ -9,11 +9,14 @@
   "dependencies": {
     "@mdi/font": "7.0.96",
     "@types/lodash": "^4.14.191",
+    "@types/randomcolor": "^0.5.7",
     "@types/uuid": "^9.0.0",
+    "@vueuse/core": "^9.12.0",
     "chart.js": "^4.2.0",
     "firebase": "^9.16.0",
     "lodash": "^4.17.21",
     "pinia": "^2.0.23",
+    "randomcolor": "^0.6.2",
     "roboto-fontface": "*",
     "uuid": "^9.0.0",
     "vue": "^3.2.38",
